--- a/src/.env
+++ b/src/.env
@@ -1,10 +1,17 @@
-#Specifies the JDBC URL to connect to the PostgreSQL database.
+# Specifies the JDBC URL to connect to the PostgreSQL database
 SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/authdb
-SPRING_DATASOURCE_USERNAME=postgres #username for PostgreSQL database authentication
-SPRING_DATASOURCE_PASSWORD=36zq67ry #Sets the password for the database user
+
+# Username for PostgreSQL database authentication
+SPRING_DATASOURCE_USERNAME=postgres
+
+# Password for the PostgreSQL database user
+SPRING_DATASOURCE_PASSWORD=36zq67ry
+
+# Secret key for signing JWT tokens used in authentication
 JWT_SECRET_KEY=8Sd9HiWlz8yq2PFgryKjXxueR1rnVfib
-# Provides the secret key for signing JWT tokens
+
+# Email address used to send verification and password reset emails
 SUPPORT_EMAIL=hayasabry984@gmail.com
-#the email address used to send verification and password reset emails
-APP_PASSWORD= mbocrluwgackyins
-# the app-specific password for the email account (required for Gmail with 2FA)
+
+# App-specific password for the Gmail account (required if 2FA is enabled)
+APP_PASSWORD=mbocrluwgackyins
