Configuration done, replaced the variables in properties with the actual values because .env file cannot be read and I don't know the reason why

--- a/src/.env
+++ b/src/.env
@@ -9,6 +9,8 @@ SPRING_DATASOURCE_PASSWORD=36zq67ry
 
 # Secret key for signing JWT tokens used in authentication
 JWT_SECRET_KEY=8Sd9HiWlz8yq2PFgryKjXxueR1rnVfib
+JWT_EXPIRATION_TIME=3600000
+# in milliseconds (1 hour)
 
 # Email address used to send verification and password reset emails
 SUPPORT_EMAIL=hayasabry984@gmail.com
