model layer is done successfully

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,5 +46,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Enables SQL Logging (for debugging purposes)
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.com.example=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.com.example=DEBUG
